# tauri-mssql-dashboard-template

./: .gitignore  README.md  components.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
src/: style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/database/: manager.rs  mod.rs
src-tauri/src/database/queries/: product.sql  purchase_orders.sql
src-tauri/src/database/types/: deserializers.rs  mod.rs  product.rs  purchase_order.rs
src/app/: layout.tsx  page.tsx
src/app/product/: layout.tsx  loading.tsx  page.tsx
src/app/product/components/: product-landing-info.tsx  (+2 more)
src/app/purchase-orders/: loading.tsx  page.tsx
src/app/settings/: page.tsx
src/atoms/: products.ts  purchase-orders.ts
src/components/: debounced-input.tsx  error-alert.tsx  kpi-card.tsx  top-search.tsx
src/components/charts/: bar-chart.tsx  chart-legend.tsx  chart-tooltip.tsx
src/components/data-table/: data-table-faceted-filter.tsx  data-table-header.tsx  data-table-quick-filter.tsx  data-table.tsx
src/components/sidebar/: circle-icon.tsx  routes.ts  settings.tsx  sidebar.tsx  theme-switcher.tsx
src/components/ui/: alert.tsx  button.tsx  card.tsx  command.tsx  dialog.tsx  input.tsx  select.tsx  switch.tsx  table.tsx  toast.tsx
src/hooks/: useConnectionStatus.ts  useProduct.ts  usePurchaseOrders.ts
src/lib/: table-filter-functions.ts  utils.ts
src/lib/types/: product.ts  purchase-order.ts
src/providers/: next-theme-provider.tsx  react-query-provider.tsx
(+2 files in other folders)
