[package]
name = "tauri-mssql-dashboard-template"
version = "0.0.0"
description = ""
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["shell-open"] }
anyhow = "1.0.71"
tiberius = { version = "*", features = ["sql-browser-tokio"] }
tokio = { version = "*", features = ["full"] }
tokio-util = "0.7.8"
bb8 = "0.8.0"
async-trait = "0.1.68"
time = "0.3.19"
futures-util = "0.3.28"
thiserror = "1.0.44"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
